src/hcparse/boost_wave/wave_c_api.h

BOOST_WAVE_EXPORT void wave_deleteWaveTokenVector(
    WaveTokenVectorHandle* vec);
BOOST_WAVE_EXPORT WaveProcessingHooksHandle* wave_newProcessingHooks();
BOOST_WAVE_EXPORT void                       wave_destroyProcessingHooks(
                          WaveProcessingHooksHandle* hooks);
BOOST_WAVE_EXPORT WaveContextHandle* wave_newWaveContext(
    const char* instring,
    const char* filename);
BOOST_WAVE_EXPORT void wave_processAll(WaveContextHandle* context);
typedef EntryHandling (*FoundWarningDirectiveImplType)(
    const WaveContextImplHandle* ctx,
    const WaveTokenListHandle*   message,
    void*                        env);
BOOST_WAVE_EXPORT void wave_setFoundWarningDirective(
    WaveContextHandle*            context,
    FoundWarningDirectiveImplType impl,
    void*                         env);
typedef EntryHandling (*FoundUnknownDirectiveImplType)(
    WaveContextImplHandle* ctx,
    WaveTokenListHandle*   line,
    WaveTokenListHandle*   pending,
    void*                  env);
BOOST_WAVE_EXPORT void wave_setFoundUnknownDirective(
    WaveContextHandle*            context,
    FoundUnknownDirectiveImplType impl);
typedef EntryHandling (*FoundDirectiveImplType)(
    WaveContextImplHandle* ctx,
    WaveTokenHandle*       tok,
    void*                  env);
BOOST_WAVE_EXPORT void wave_setFoundDirective(
    WaveContextHandle*     context,
    FoundDirectiveImplType impl);
BOOST_WAVE_EXPORT void wave_destroyContext(WaveContextHandle* context);
BOOST_WAVE_EXPORT void wave_contextSetData(
    WaveContextHandle* context,
    void*              data);
BOOST_WAVE_EXPORT void* wave_contextGetData(WaveContextHandle* context);
BOOST_WAVE_EXPORT bool  wave_contextHasError(WaveContextHandle* context);
BOOST_WAVE_EXPORT bool wave_contextHasWarnings(WaveContextHandle* context);
BOOST_WAVE_EXPORT void wave_deleteDiagnostics(WaveDiagnostics* diag);
BOOST_WAVE_EXPORT WaveDiagnostics
                       wave_contextPopWarning(WaveContextHandle* context);
BOOST_WAVE_EXPORT void wave_addMacroDefinition(
    WaveContextHandle* context,
    const char*        macrostring,
    bool               is_predefined);
BOOST_WAVE_EXPORT bool wave_removeMacroDefinition(
    WaveContextHandle* context,
    const char*        macrostring,
    bool               is_predefined);
BOOST_WAVE_EXPORT bool wave_isDefinedMacro(
    WaveContextHandle* context,
    const char*        name);
BOOST_WAVE_EXPORT bool wave_getMacroDefinition(
    WaveContextHandle*      context,
    const char*             name,
    bool*                   is_function_style,
    bool*                   is_predefined,
    WavePosition*           pos,
    WaveTokenVectorHandle** parameters,
    WaveTokenVectorHandle** definition);
BOOST_WAVE_EXPORT WaveIteratorHandle* wave_beginIterator(
    WaveContextHandle* context);
BOOST_WAVE_EXPORT WaveIteratorHandle* wave_endIterator(
    WaveContextHandle* context);
BOOST_WAVE_EXPORT void wave_advanceIterator(WaveIteratorHandle* iter);
BOOST_WAVE_EXPORT bool wave_neqIterator(
    WaveIteratorHandle* iter1,
    WaveIteratorHandle* iter2);
BOOST_WAVE_EXPORT WaveTokenHandle* wave_iterGetTok(
    WaveIteratorHandle* iter);
BOOST_WAVE_EXPORT void wave_deleteTok(WaveTokenHandle* tok);
BOOST_WAVE_EXPORT WaveTokId   wave_tokGetId(WaveTokenHandle* tok);
BOOST_WAVE_EXPORT const char* wave_tokGetValue(WaveTokenHandle* tok);